--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "angular": "1.5.9",
-    "angular-route": "1.5.9"
+    "angular-route": "1.5.9",
+    "ngstorage": "^0.3.11"
   },
   "devDependencies": {
     "live-server": "^1.0.0"
